--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
